# cmake-udemy-learning

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake
configured/: config.hpp.in
inc/my_lib/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  my_lib.cc
